--- a/my-custom-theme/Dockerfile
+++ b/my-custom-theme/Dockerfile
@@ -1,11 +1,14 @@
 FROM quay.io/keycloak/keycloak:26.0.7
 
-# Add custom themes
+# Add custom themes to the container
 COPY ./keycloak-themes /opt/keycloak/themes
 
-# Expose port 8080
+# Set the admin username and password
+ENV KEYCLOAK_ADMIN=admin
+ENV KEYCLOAK_ADMIN_PASSWORD=admin
+
+# Expose the necessary ports
 EXPOSE 8080
 
-# Run Keycloak
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh"]
+# Start the Keycloak server in dev mode
 CMD ["start-dev"]
